--- a/笔记.md
+++ b/笔记.md
@@ -71,3 +71,97 @@ function getMinPath(mapArr, row, col) {
 getMinPath(mapArr, rightStep, bottomStep);
 ~~~
 
+## 动态规划：
+
+~~~js
+const firstLine = readline();
+const [M, N] = firstLine.split(" ").map((item) => parseInt(item)); // 得到 M & N 
+const inputArr = [];
+let line;
+while((line = readline()) != '') {
+  let arr = line.split(' ');
+  arr = arr.map((item) => parseInt(item))
+  inputArr.push(arr);
+}
+// 明确dp数组的含义：dp[i][j]即为走到i,j位置处的路径最小和，多申请一行一列方便统一dp数组计算过程
+const dp = new Array(M + 1);
+for (let i = 0; i <= M; i++) {
+  dp[i] = new Array(N + 1); // 初始化二维数组之坑：一定不要写dp.push(new Array)，上面申请dp数组第一维的时候其实已经有M + 1个元素了，只不过元素为 空（M + 1个空元素）
+}
+// 初始化dp数组
+for(let i = 0; i <= N; i ++) {
+  dp[0][i] = Infinity;
+}
+for(let i = 0; i <= M; i ++) {
+  dp[i][0] = Infinity;
+}
+dp[1][1] = inputArr[0][0];
+// 计算dp数组
+for(let i = 1; i <= M; i ++) {
+  for(let j = 1; j <= N; j ++) {
+    if(i === 1 && j === 1) continue;
+    dp[i][j] = Math.min(dp[i - 1][j], dp[i][j - 1]) + inputArr[i - 1][j - 1];
+  }
+}
+console.log(dp[M][N]);
+~~~
+
+
+
+# 代金券组合（力扣322、动态规划、装满背包的最少物品数）
+
+**时间限制：** 3000MS
+**内存限制：** 589824KB
+
+**题目描述：**
+
+近期某商场由于周年庆，开启了“0元购”活动。活动中，消费者可以通过组合手中的代金券，实现0元购买指定商品。    聪明的小团想要用算法来帮助他快速计算：对于指定价格的商品，使用代金券凑出其价格即可，但所使用的代金券总面额不可超过商品价格。由于代金券数量有限，使用较少的代金券张数则可以实现价值最大化，即最佳优惠。    假设现有100元的商品，而代金券有50元、30元、20元、5元四种，则最佳优惠是两张50元面额的代金券；而如果现有65元的商品，则最佳优惠是两张30元代金券以及一张5元代金券。    请你帮助小团使用一段代码来实现代金券计算。
+
+输入描述
+
+输入可以有多个测试样例，每个测试由两行组成。
+
+其中第一行包含一个整数P，表示商品的价格，1≤P≤10000；输入P为0时表示结束。
+
+第二行包含若干整数，使用空格分割。其中第一个整数N（1≤N≤20）表示有多少种代金券，其后跟随M个整数，表示手中持有的代金券面额（1≤N≤1000），每种代金券数量不限。
+
+输出描述
+
+找到最少张数的代金券，使其面额恰好等于商品价格。输出所使用的代金券数量；
+
+如果有多个最优解，只输出其中一种即可；
+
+如果无解，则需输出“Impossible”。
+
+~~~js
+let target; // 需要装满的背包容量
+let coins; // 物品种类数组
+let line; // 读取数据辅助变量
+while((line = readline()) != "0") {
+  [target] = line.split(" ").map(item => parseInt(item));
+  line = readline();
+  coins = line.split(" ").map(item => parseInt(item));
+  
+  // 初始化dp数组
+  const dp = new Array(coins.length + 1);
+  for(let i = 0; i <= coins.length; i ++) {
+    dp[i] = new Array(target + 1).fill(Infinity);
+    dp[i][0] = 0;
+  }
+  
+  for(let i = 1; i <= coins.length; i ++) {
+    for(let j = 1; j <= target; j ++) {
+      dp[i][j] = dp[i - 1][j];
+      if(j >= coins[i - 1]) {
+        dp[i][j] = Math.min(dp[i - 1][j], dp[i][j - coins[i - 1]] + 1);
+      }
+    }
+  }
+  
+  if(dp[coins.length][target] == Infinity) {
+    console.log("Impossible");
+  }
+  console.log(dp[coins.length][target])
+}
+~~~
+
